--- a/src/app/views/orders/orders.component.html
+++ b/src/app/views/orders/orders.component.html
@@ -1,4 +1,4 @@
-<div class="alert alert-success row">
+<div class="alert alert-info row">
   <table
     class="table table-active table-bordered align-middle col-8"
     style="text-align: center"
