--- a/src/app/views/products/products.component.html
+++ b/src/app/views/products/products.component.html
@@ -1,4 +1,4 @@
-<div class="alert alert-success row">
+<div class="alert alert-info row">
   <div class="row">
     <div class="search-hero">
       <div class="input-group">
