--- a/src/app/views/single-order/single-order.component.html
+++ b/src/app/views/single-order/single-order.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="order; else loadingBlock" class="align-center">
-  <div class="orderDiv m-5" class="alert alert-success">
+  <div class="orderDiv m-5" class="alert alert-info">
     <p>
       <label> Order Date: </label>{{ order.orderDate | date : "yyyy-MM-dd" }}
     </p>
