--- a/src/app/views/single-user/single-user.component.html
+++ b/src/app/views/single-user/single-user.component.html
@@ -46,7 +46,7 @@
               <br />
               <div class="row">
                 <div class="col-lg-3 col-md-4 label">Phone:</div>
-                <div class="col-lg-9 col-md-8">{{ user.phone }}</div>
+                <div class="col-lg-9 col-md-8">{{ user.phoneNumber }}</div>
               </div>
               <br />
               <div class="row">
